Read titles from yaml front matter

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -40,9 +40,9 @@
 <div class="sy-head">
 	<div class="sy-head-blur"></div>
 	<div class="sy-head-inner sy-container mx-auto">
-		<a class="sy-head-brand" href="index.html">
-			<img class="light-logo" src="_static/logo-light.svg" alt="Elastic" height="28" loading="lazy">
-			<img class="dark-logo" src="_static/logo-dark.svg" alt="Elastic" height="28" loading="lazy">
+		<a class="sy-head-brand" href="/index.html">
+			<img class="light-logo" src="/_static/logo-light.svg" alt="Elastic" height="28" loading="lazy">
+			<img class="dark-logo" src="/_static/logo-dark.svg" alt="Elastic" height="28" loading="lazy">
 			<strong>Elastic</strong>
 		</a>
 		<div class="sy-head-nav" id="HeadNav">
@@ -118,69 +118,69 @@
 			<div class="sy-scrollbar p-6">
 				<div class="globaltoc" data-expand-depth="1"><p class="caption" role="heading" aria-level="3"><span class="caption-text">Elastic Docs Guide</span></p>
 					<ul>
-						<li class="toctree-l1 _expand"><a class="reference internal" href="elastic/index.html">Elastic content</a><ul>
-								<li class="toctree-l2 _collapse"><a class="reference internal" href="elastic/semantic-search/index.html">Tutorial: Semantic search with the inference API</a><ul>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/semantic-search/amazon-bedrock.html">Amazon Bedrock</a></li>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/semantic-search/azure-ai-studio.html">Azure AI Studio</a></li>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/semantic-search/azure-openai.html">Azure OpenAI</a></li>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/semantic-search/cohere.html">Cohere</a></li>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/semantic-search/elser.html">ELSER</a></li>
+						<li class="toctree-l1 _expand"><a class="reference internal" href="/elastic/index.html">Elastic content</a><ul>
+								<li class="toctree-l2 _collapse"><a class="reference internal" href="/elastic/semantic-search/index.html">Tutorial: Semantic search with the inference API</a><ul>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/semantic-search/amazon-bedrock.html">Amazon Bedrock</a></li>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/semantic-search/azure-ai-studio.html">Azure AI Studio</a></li>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/semantic-search/azure-openai.html">Azure OpenAI</a></li>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/semantic-search/cohere.html">Cohere</a></li>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/semantic-search/elser.html">ELSER</a></li>
 									</ul>
 									<button aria-label="Expand Tutorial: Semantic search with the inference API"><i class="i-lucide chevron-right"></i></button></li>
-								<li class="toctree-l2 _collapse"><a class="reference internal" href="elastic/search-labs/index.html">Search Labs</a><ul>
-										<li class="toctree-l3 _collapse"><a class="reference internal" href="elastic/search-labs/install.html">Install Elasticsearch</a><ul>
-												<li class="toctree-l4"><a class="reference internal" href="elastic/search-labs/install/cloud.html">Elastic Cloud</a></li>
-												<li class="toctree-l4"><a class="reference internal" href="elastic/search-labs/install/docker.html">Docker</a></li>
+								<li class="toctree-l2 _collapse"><a class="reference internal" href="/elastic/search-labs/index.html">Search Labs</a><ul>
+										<li class="toctree-l3 _collapse"><a class="reference internal" href="/elastic/search-labs/install.html">Install Elasticsearch</a><ul>
+												<li class="toctree-l4"><a class="reference internal" href="/elastic/search-labs/install/cloud.html">Elastic Cloud</a></li>
+												<li class="toctree-l4"><a class="reference internal" href="/elastic/search-labs/install/docker.html">Docker</a></li>
 											</ul>
 											<button aria-label="Expand Install Elasticsearch"><i class="i-lucide chevron-right"></i></button></li>
-										<li class="toctree-l3 _collapse"><a class="reference internal" href="elastic/search-labs/search.html">Search Tutorial</a><ul>
-												<li class="toctree-l4"><a class="reference internal" href="elastic/search-labs/search/req.html">Requirements</a></li>
-												<li class="toctree-l4"><a class="reference internal" href="elastic/search-labs/search/setup.html">Project Setup</a></li>
+										<li class="toctree-l3 _collapse"><a class="reference internal" href="/elastic/search-labs/search.html">Search Tutorial</a><ul>
+												<li class="toctree-l4"><a class="reference internal" href="/elastic/search-labs/search/req.html">Requirements</a></li>
+												<li class="toctree-l4"><a class="reference internal" href="/elastic/search-labs/search/setup.html">Project Setup</a></li>
 											</ul>
 											<button aria-label="Expand Search Tutorial"><i class="i-lucide chevron-right"></i></button></li>
-										<li class="toctree-l3 _collapse"><a class="reference internal" href="elastic/search-labs/chat.html">Chatbot Tutorial</a><ul>
-												<li class="toctree-l4"><a class="reference internal" href="elastic/search-labs/chat/req.html">Requirements</a></li>
-												<li class="toctree-l4"><a class="reference internal" href="elastic/search-labs/chat/rag.html">Project Setup</a></li>
+										<li class="toctree-l3 _collapse"><a class="reference internal" href="/elastic/search-labs/chat.html">Chatbot Tutorial</a><ul>
+												<li class="toctree-l4"><a class="reference internal" href="/elastic/search-labs/chat/req.html">Requirements</a></li>
+												<li class="toctree-l4"><a class="reference internal" href="/elastic/search-labs/chat/rag.html">Project Setup</a></li>
 											</ul>
 											<button aria-label="Expand Chatbot Tutorial"><i class="i-lucide chevron-right"></i></button></li>
 									</ul>
 									<button aria-label="Expand Search Labs"><i class="i-lucide chevron-right"></i></button></li>
-								<li class="toctree-l2 _collapse"><a class="reference internal" href="elastic/reference/index.html">Automated Settings</a><ul>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/reference/source.html">Kibana Settings source file</a></li>
-										<li class="toctree-l3"><a class="reference internal" href="elastic/reference/generated.html">Kibana Settings (automated output)</a></li>
+								<li class="toctree-l2 _collapse"><a class="reference internal" href="/elastic/reference/index.html">Automated Settings</a><ul>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/reference/source.html">Kibana Settings source file</a></li>
+										<li class="toctree-l3"><a class="reference internal" href="/elastic/reference/generated.html">Kibana Settings (automated output)</a></li>
 									</ul>
 									<button aria-label="Expand Automated Settings"><i class="i-lucide chevron-right"></i></button></li>
-								<li class="toctree-l2"><a class="reference internal" href="elastic/observability/index.html">Observability overview</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/elastic/observability/index.html">Observability overview</a></li>
 							</ul>
 							<button aria-label="Collapse Elastic content"><i class="i-lucide chevron-right"></i></button></li>
-						<li class="toctree-l1 _expand"><a class="reference internal" href="markup/index.html">Markup guide</a><ul>
-								<li class="toctree-l2"><a class="reference internal" href="markup/admonitions.html">Admonitions</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/tables.html">Tables</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/code.html">Code</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/tabs.html">Tabs</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/dropdowns.html">Dropdowns</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/cards_grids.html">Cards and Grids</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/diagrams.html">Diagrams</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/images.html">Images</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/sundries.html">Sundries</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/substitutions.html">Substitutions</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/file_inclusion.html">File Inclusion</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/extensions_with_roles_and_directives.html">Extensions with Roles and Directives</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/yaml_to_markdown.html">Kibana Configuration</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/notebook.html">Notebooks in Sphinx</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/rst.html">ReStructuredText (RST)</a></li>
-								<li class="toctree-l2"><a class="reference internal" href="markup/rst_in_markdown.html">RST in Markdown</a></li>
+						<li class="toctree-l1 _expand"><a class="reference internal" href="/markup/index.html">Markup guide</a><ul>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/admonitions.html">Admonitions</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/tables.html">Tables</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/code.html">Code</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/tabs.html">Tabs</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/dropdowns.html">Dropdowns</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/cards_grids.html">Cards and Grids</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/diagrams.html">Diagrams</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/images.html">Images</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/sundries.html">Sundries</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/substitutions.html">Substitutions</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/file_inclusion.html">File Inclusion</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/extensions_with_roles_and_directives.html">Extensions with Roles and Directives</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/yaml_to_markdown.html">Kibana Configuration</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/notebook.html">Notebooks in Sphinx</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/rst.html">ReStructuredText (RST)</a></li>
+								<li class="toctree-l2"><a class="reference internal" href="/markup/rst_in_markdown.html">RST in Markdown</a></li>
 							</ul>
 							<button aria-label="Collapse Markup guide"><i class="i-lucide chevron-right"></i></button></li>
-						<li class="toctree-l1 _expand"><a class="reference internal" href="nested/index.html">Nested content</a><ul>
-								<li class="toctree-l2 _collapse"><a class="reference internal" href="nested/content/index.html">Content</a><ul>
-										<li class="toctree-l3"><a class="reference internal" href="nested/content/nest-cafe.html">Nest Cafe</a></li>
+						<li class="toctree-l1 _expand"><a class="reference internal" href="/nested/index.html">Nested content</a><ul>
+								<li class="toctree-l2 _collapse"><a class="reference internal" href="/nested/content/index.html">Content</a><ul>
+										<li class="toctree-l3"><a class="reference internal" href="/nested/content/nest-cafe.html">Nest Cafe</a></li>
 									</ul>
 									<button aria-label="Expand Content"><i class="i-lucide chevron-right"></i></button></li>
 							</ul>
 							<button aria-label="Collapse Nested content"><i class="i-lucide chevron-right"></i></button></li>
-						<li class="toctree-l1 _expand"><a class="reference internal" href="versioning/index.html">Versioned content</a><ul>
-								<li class="toctree-l2"><a class="reference internal" href="versioning/versioned.html">Versioned</a></li>
+						<li class="toctree-l1 _expand"><a class="reference internal" href="/versioning/index.html">Versioned content</a><ul>
+								<li class="toctree-l2"><a class="reference internal" href="/versioning/versioned.html">Versioned</a></li>
 							</ul>
 							<button aria-label="Collapse Versioned content"><i class="i-lucide chevron-right"></i></button></li>
 					</ul>
@@ -226,6 +226,7 @@
 			<div class="min-w-0 max-w-6xl px-6 pb-6 pt-8 xl:px-12">
 				<article class="yue" role="main">
 					<section id="elastic-docs-v3">
+						<h1>@(Model.Title)</h1>
 						@(new HtmlString(Model.MarkdownHtml))
 					</section>
 
