--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -264,5 +264,18 @@
 		</div>
 	</div>
 </footer>
+<script src="/_static/documentation_options.js?v=5929fcd5"></script>
+<script src="/_static/doctools.js?v=9a2dae69"></script>
+<script src="/_static/sphinx_highlight.js?v=dc90522c"></script>
+<script src="/_static/sphinx_highlight.js?v=dc90522c"></script>
+<script>let toggleHintShow = 'Click to show';</script>
+<script>let toggleHintHide = 'Click to hide';</script>
+<script>let toggleOpenOnPrint = 'true';</script>
+<script src="/_static/togglebutton.js?v=4a39c7ea"></script>
+<script src="/_static/design-tabs.js?v=f930bc37"></script>
+<script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
+<script src="/_static/shibuya.js?v=c5fc9e80"></script>
+<script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
 </body>
+
 </html>
