Implemented several directives

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="/_static/sphinx-design.min.css" />
 	<link media="print" rel="stylesheet" type="text/css" href="/_static/print.css" />
 	<link rel="stylesheet" type="text/css" href="/_static/custom.css" />
+	<link rel="stylesheet" type="text/css" href="/_static/atom-one-light.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -276,6 +277,11 @@
 <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
 <script src="/_static/shibuya.js?v=c5fc9e80"></script>
 <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
-</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
+<!-- and it's easy to individually load additional languages -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/go.min.js"></script>
+
+<script>hljs.highlightAll();</script>
+</body>
 </html>
