--- a/src/Elastic.Markdown/Slices/_ViewImports.cshtml
+++ b/src/Elastic.Markdown/Slices/_ViewImports.cshtml
@@ -1,10 +1,11 @@
-@inherits RazorSliceHttpResult
+@inherits RazorSlice
 
-@using System.Globalization;
-@using Microsoft.AspNetCore.Razor;
-@using Microsoft.AspNetCore.Http.HttpResults;
-@using Elastic.Markdown.Templating;
+@using System.Globalization
 @using Microsoft.AspNetCore.Html
+@using Microsoft.AspNetCore.Razor
+@using Microsoft.AspNetCore.Http.HttpResults
+@using RazorSlices
+@using Elastic.Markdown.Templating
 
 @tagHelperPrefix __disable_tagHelpers__:
 @removeTagHelper *, Microsoft.AspNetCore.Mvc.Razor
