--- a/src/Elastic.Markdown/Slices/_ViewImports.cshtml
+++ b/src/Elastic.Markdown/Slices/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Http.HttpResults
 @using RazorSlices
 @using Elastic.Markdown.Templating
+@using Elastic.Markdown.Myst.Directives
 
 @tagHelperPrefix __disable_tagHelpers__:
 @removeTagHelper *, Microsoft.AspNetCore.Mvc.Razor
