--- a/src/Elastic.Markdown/Slices/Directives/Code.cshtml
+++ b/src/Elastic.Markdown/Slices/Directives/Code.cshtml
@@ -1,5 +1,4 @@
-@using Elastic.Markdown.Myst.CustomContainers
-@inherits RazorSlices.RazorSlice<Elastic.Markdown.Slices.Blocks.CodeHtml>
+@inherits RazorSlices.RazorSlice<CodeModel>
 <div class="highlight-@Model.Language notranslate">
 	<div class="highlight">
 		@if (!string.IsNullOrEmpty(Model.Caption))
