--- a/src/Elastic.Markdown/Slices/Directives/TabItem.cshtml
+++ b/src/Elastic.Markdown/Slices/Directives/TabItem.cshtml
@@ -1,4 +1,4 @@
-@inherits RazorSlices.RazorSlice<Elastic.Markdown.Slices.Blocks.TabItemHtml>
+@inherits RazorSlices.RazorSlice<TabItemModel>
 <input checked="@(Model.Index == 0 ? "checked" : "")" id="sd-tab-item-@Model.Index" name="sd-tab-set-@Model.TabSetIndex" type="radio">
 <label class="sd-tab-label" for="sd-tab-item-@Model.Index">@Model.Title</label>
 <div class="sd-tab-content docutils">
