--- a/src/Elastic.Markdown/Slices/Directives/Card.cshtml
+++ b/src/Elastic.Markdown/Slices/Directives/Card.cshtml
@@ -1,7 +1,7 @@
 @inherits RazorSlices.RazorSlice<CardModel>
 <div class="sd-card sd-sphinx-override sd-mb-3 sd-shadow-sm docutils">
 	<div class="sd-card-body docutils">
-		<div class="sd-card-title sd-font-weight-bold docutils">@Model.Title</div>
+		<div class="sd-card-title sd-font-weight-bold docutils">@(new HtmlString(Model.Title))</div>
 		[CONTENT]
 		@if (!string.IsNullOrEmpty(Model.Link))
 		{
