--- a/src/Elastic.Markdown/Slices/Directives/GridItemCard.cshtml
+++ b/src/Elastic.Markdown/Slices/Directives/GridItemCard.cshtml
@@ -2,7 +2,7 @@
 <div class="sd-col sd-d-flex-row docutils">
 	<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
 		<div class="sd-card-body docutils">
-			<div class="sd-card-title sd-font-weight-bold docutils">@Model.Title</div>
+			<div class="sd-card-title sd-font-weight-bold docutils">@(new HtmlString(Model.Title))</div>
 			[CONTENT]
 			@if (!string.IsNullOrEmpty(Model.Link))
 			{
