TOC and image support

--- a/src/Elastic.Markdown/Slices/_ViewImports.cshtml
+++ b/src/Elastic.Markdown/Slices/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using RazorSlices
 @using Elastic.Markdown.Templating
 @using Elastic.Markdown.Myst.Directives
+@using Elastic.Markdown.Slices
 
 @tagHelperPrefix __disable_tagHelpers__:
 @removeTagHelper *, Microsoft.AspNetCore.Mvc.Razor
