render documentation tree navigation

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -4,7 +4,8 @@
 	public LayoutModel LayoutModel => new()
 	{
 		Title = $"Elastic Documentation: {Model.Title}",
-		PageTocItems = Model.PageTocItems
+		PageTocItems = Model.PageTocItems,
+		Tree = Model.Tree
 	};
 }
 <section id="elastic-docs-v3">
