--- a/src/Elastic.Markdown/Slices/Layout/_TocTreeNav.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_TocTreeNav.cshtml
@@ -1,12 +1,15 @@
 @inherits RazorSlice<TreeItemModel>
 @foreach (var file in Model.SubTree.Files)
 {
-<li class="toctree-l@(Model.SubTree.Level + 1)"><a class="reference internal" href="@file.Url">@file.Title</a>
+	var current = file == Model.SubTree.CurrentFile ? "current" : string.Empty;
+<li class="toctree-l@(Model.SubTree.Level + 1) @current"><a class="reference internal @current" href="@file.Url">@file.Title</a>
 </li>
 }
 @foreach (var g in Model.SubTree.Nested)
 {
-<li class="toctree-l@(g.Level)"><a class="reference internal" href="@g.Index?.Url">@g.Index?.Title</a><ul>@await RenderPartialAsync(Elastic.Markdown.Slices.Layout._TocTreeNav.Create(new TreeItemModel
+	var current = g.Current ? "current" : string.Empty;
+	var expand = g.Current ? "_expand" : string.Empty;
+<li class="toctree-l@(g.Level) @current"><a class="reference internal" href="@g.Index?.Url">@g.Index?.Title</a><ul>@await RenderPartialAsync(Elastic.Markdown.Slices.Layout._TocTreeNav.Create(new TreeItemModel
 		{
 			Level = g.Level,
 			Index = g.Index,
