--- a/src/Elastic.Markdown/Slices/_Layout.cshtml
+++ b/src/Elastic.Markdown/Slices/_Layout.cshtml
@@ -16,7 +16,8 @@
 	</div>
 </div>
 <div class="sy-page sy-container flex mx-auto">
-	@(await RenderPartialAsync(Elastic.Markdown.Slices.Layout._TocTree.Create(Model)))
+	@(new HtmlString(Model.Navigation))
+	@*@(await RenderPartialAsync(Elastic.Markdown.Slices.Layout._TocTree.Create(Model)))*@
 	@(await RenderPartialAsync(Elastic.Markdown.Slices.Layout._TableOfContents.Create(Model)))
 	<main class="sy-main w-full max-sm:max-w-full print:pt-6">
 		<div class="sy-breadcrumbs" role="navigation">
