--- a/src/Elastic.Markdown/Slices/Layout/_TocTree.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_TocTree.cshtml
@@ -1,4 +1,4 @@
-@inherits RazorSlice<Navigationmodel>
+@inherits RazorSlice<NavigationModel>
 <aside id="lside" class="sy-lside md:w-72 md:shrink-0 print:hidden">
 	<div class="sy-lside-inner md:sticky">
 		<div class="sy-scrollbar p-6">
