Add test infrastructure and various new directives (#8)
* Integrate System.IO.Abstractions for improved file I/O abstraction

Replaced direct file system access with System.IO.Abstractions to enhance testability and decouple file operations. Added testing projects and initial test cases for Markdown file parsing.

* Add new test dependencies and update unit test

Included several new package references for testing like FluentAssertions and xunit. Also enhanced the unit test by integrating file system mocking, logging, and async test execution.

* Directive block parsing tests

* Start supporting image blocks

* support figures and inline images with attributes

* mermaid support

* add comments and sundries support

* validate licenses remove for now

--- a/src/Elastic.Markdown/Slices/Directives/Admonition.cshtml
+++ b/src/Elastic.Markdown/Slices/Directives/Admonition.cshtml
@@ -1,6 +1,5 @@
 @inherits RazorSlice<AdmonitionViewModel>
-<div class="admonition @Model.Directive @Model.Classes" id="@Model.Id">
+<div class="admonition @Model.Directive @Model.Classes" id="@Model.CrossReferenceName" open="@Model.Open">
 	<p class="admonition-title">@Model.Title</p>
 	[CONTENT]
 </div>
-
