do not hardcore /_static for css script references

--- a/src/Elastic.Markdown/Slices/_Layout.cshtml
+++ b/src/Elastic.Markdown/Slices/_Layout.cshtml
@@ -74,7 +74,7 @@
 	</main>
 </div>
 @(await RenderPartialAsync<_Footer>())
-@(await RenderPartialAsync<_Scripts>())
+@(await RenderPartialAsync(_Scripts.Create(Model)))
 @await RenderSectionAsync("scripts")
 
 </body>
