--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -7,7 +7,8 @@
 		PageTocItems = Model.PageTocItems,
 		Tree = Model.Tree,
 		CurrentDocument = Model.CurrentDocument,
-		Navigation = Model.Navigation
+		Navigation = Model.Navigation,
+		UrlPath = Model.UrlPath,
 	};
 }
 <section id="elastic-docs-v3">
