--- a/src/Elastic.Markdown/Slices/Layout/_Scripts.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Scripts.cshtml
@@ -1,14 +1,15 @@
-<script src="/_static/documentation_options.js"></script>
-<script src="/_static/doctools.js"></script>
-<script src="/_static/sphinx_highlight.js"></script>
-<script src="/_static/sphinx_highlight.js"></script>
+@inherits RazorSlice<LayoutViewModel>
+<script src="@Model.Static("documentation_options.js")"></script>
+<script src="@Model.Static("doctools.js")></script>
+<script src="@Model.Static("sphinx_highlight.js")></script>
+<script src="@Model.Static("sphinx_highlight.js")></script>
 <script>let toggleHintShow = 'Click to show';</script>
 <script>let toggleHintHide = 'Click to hide';</script>
 <script>let toggleOpenOnPrint = 'true';</script>
-<script src="/_static/togglebutton.js"></script>
-<script src="/_static/design-tabs.js"></script>
+<script src="@Model.Static("togglebutton.js")></script>
+<script src="@Model.Static("design-tabs.js")></script>
 <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
-<script src="/_static/shibuya.js"></script>
+<script src="@Model.Static("shibuya.js")></script>
 <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
