--- a/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
@@ -3,8 +3,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@Model.Title</title>
-	<link rel="index" title="Index" href="genindex.html"/>
-	<link rel="search" title="Search" href="search.html"/>
+	<link rel="index" title="Index" href="@Model.Link("genindex.html")"/>
+	<link rel="search" title="Search" href="@Model.Link("search.html")"/>
 	<link rel="next" title="Elastic content" href="elastic/index.html"/>
 	<link rel="stylesheet" type="text/css" href="@Model.Static("pygments.css")"/>
 	<link rel="stylesheet" type="text/css" href="@Model.Static("shibuya.css")"/>
