include url path prefix in images

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -8,7 +8,7 @@
 		Tree = Model.Tree,
 		CurrentDocument = Model.CurrentDocument,
 		Navigation = Model.Navigation,
-		UrlPath = Model.UrlPath,
+		UrlPathPrefix = Model.UrlPathPrefix,
 	};
 }
 <section id="elastic-docs-v3">
