--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -1,3 +1,4 @@
+@using Markdig
 @inherits RazorSliceHttpResult<IndexViewModel>
 @implements IUsesLayout<Elastic.Markdown.Slices._Layout, LayoutViewModel>
 @functions {
@@ -16,7 +17,8 @@
 	};
 }
 <section id="elastic-docs-v3">
-	<h1>@(Model.Title)</h1>
+	@* This way it's correctly rendered as <h1>text</h1> instead of <h1><p>text</p></h1> *@
+	@(new HtmlString(Markdown.ToHtml("# " + Model.TitleRaw)))
 	@if (Model.Applies is not null)
 	{
 		await RenderPartialAsync(Applies.Create(Model.Applies));
