--- a/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
@@ -7,15 +7,8 @@
 	<link rel="index" title="Index" href="@Model.Link("genindex.html")"/>
 	<link rel="search" title="Search" href="@Model.Link("search.html")"/>
 	<link rel="next" title="Elastic content" href="elastic/index.html"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("pygments.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("shibuya.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("mystnb.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("copybutton.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("togglebutton.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("sphinx-design.min.css")"/>
-	<link media="print" rel="stylesheet" type="text/css" href="@Model.Static("/_static/print.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("custom.css")"/>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("atom-one-light.css")"/>
+	<link rel="stylesheet" type="text/css" href="@Model.Static("styles.css")"/>
+	<link media="print" rel="stylesheet" type="text/css" href="@Model.Static("print.css")"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
