--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -4,6 +4,7 @@
 @import "highlight.js/styles/atom-one-dark.css";
 @import "./markdown/typography.css";
 @import "./markdown/list.css";
+@import "./markdown/tabs.css";
 
 #default-search::-webkit-search-cancel-button {
 	padding-right: calc(var(--spacing) * 2);
@@ -87,4 +88,25 @@
 
 * {
 	scroll-margin-top: calc(var(--spacing) * 26);
+}
+
+:root {
+	--outline-size: max(2px, 0.08em);
+	--outline-style: auto;
+	--outline-color: var(--color-blue-elastic);
+	--outline-offset: 5;
+}
+
+:is(a, button, input, textarea, summary):focus {
+	outline: var(--outline-size) var(--outline-style) var(--outline-color);
+	outline-offset: var(--outline-offset, var(--outline-size));
+}
+
+:is(a, button, input, textarea, summary):focus-visible {
+	outline: var(--outline-size) var(--outline-style) var(--outline-color);
+	outline-offset: var(--outline-offset, var(--outline-size));
+}
+
+:is(a, button, input, textarea, summary):focus:not(:focus-visible) {
+	outline: none;
 }
