--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -43,8 +43,8 @@
 
 @layer components {
 	.link {
-		font-family: "Mier B", "Inter", sans-serif;
 		@apply 
+			font-sans
 			text-blue-elastic 
 			text-nowrap
 			font-semibold
@@ -90,9 +90,9 @@
 	}
 
 	.applies {
+		@apply font-sans;
 		border-bottom: 1px solid var(--color-gray-300);
 		padding-bottom: calc(var(--spacing) * 3);
-		font-family: "Mier B", "Inter", sans-serif;
 
 		.applies-to-label {
 			display: block;
@@ -137,4 +137,8 @@
 
 :is(a, button, input, textarea, summary):focus:not(:focus-visible) {
 	outline: none;
+}
+
+.markdown-content {
+	@apply font-body;
 }
