Add htmx to dynamically load content (#545)
* Add htmx to dynamicaly load content

* Fix copy button

* Add HtmxLinkeInlineRenderer

* scroll position and hljs warning

* cleanup

* Fix tests

--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -87,7 +87,7 @@
 	}
 	
 	.content-container {
-		@apply w-full max-w-[80ch] lg:w-[80ch];
+		@apply w-full max-w-[80ch];
 	}
 
 	.applies {
@@ -138,6 +138,38 @@
 
 :is(a, button, input, textarea, summary):focus:not(:focus-visible) {
 	outline: none;
+}
+
+.htmx-indicator {
+	display:none;
+}
+.htmx-request .htmx-indicator,
+.htmx-request.htmx-indicator{
+	display:block;
+	z-index: 9999;
+}
+
+.progress {
+	animation: progress 1s infinite linear;
+}
+
+.left-right {
+	transform-origin: 0% 50%;
+}
+@keyframes progress {
+	0% {
+		transform:  translateX(0) scaleX(0);
+	}
+	40% {
+		transform:  translateX(0) scaleX(0.4);
+	}
+	100% {
+		transform:  translateX(100%) scaleX(0.5);
+	}
+}
+
+#pages-nav .current {
+	@apply text-blue-elastic!;
 }
 
 .markdown-content {
