Add support for screenshot class (#665)
* it actually works

Signed-off-by: bmorelli25 <brandon.morelli@elastic.co>

* Add newline

Signed-off-by: bmorelli25 <brandon.morelli@elastic.co>

* support :screenshot: instead

* add docs

* more realistic example

---------

Signed-off-by: bmorelli25 <brandon.morelli@elastic.co>

--- a/src/Elastic.Markdown/Assets/markdown/images.css
+++ b/src/Elastic.Markdown/Assets/markdown/images.css
@@ -14,5 +14,8 @@
 			display: initial;
 			vertical-align: initial;
 		}
+        .screenshot {
+            @apply border-1 border-grey-20 p-4 bg-grey-10 shadow-md;
+        }
 	}
 }
