Use default font for definition lists (#689)
* Use default font for definition lists

* Adjust default font

--- a/src/Elastic.Markdown/Assets/markdown/typography.css
+++ b/src/Elastic.Markdown/Assets/markdown/typography.css
@@ -1,6 +1,6 @@
 .markdown-content {
 	
-	font-size: 16px;
+	@apply text-ink text-base font-body;
 
 	h1 {
 		@apply text-4xl text-ink-dark font-semibold;
@@ -47,10 +47,10 @@
 	}
 	
 	p {
-		@apply font-body text-base text-ink mt-4;
+		@apply mt-4;
 		letter-spacing: 0;
 		line-height: 1.5em;
-		text-wrap: pretty;
+		/*text-wrap: pretty;*/
 	}
 	
 	a {
