Add content hash as query string to static file paths (#758)
* Add content hash as query string to static file paths

* Fix class name

* Fix concurrency

* Use instance directly instead of passing the function as lambda

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -16,7 +16,8 @@
 		StaticUrlPathPrefix = Model.StaticUrlPathPrefix,
 		GithubEditUrl = Model.GithubEditUrl,
 		AllowIndexing = Model.AllowIndexing,
-		Features = Model.Features
+		Features = Model.Features,
+		StaticFileContentHashProvider = Model.StaticFileContentHashProvider
 	};
 }
 <section id="elastic-docs-v3">
