Preload fonts in use as per CSS definitions (#765)
* Preload fonts in use as per CSS definitions

* Adjust FontUriCache typing and stricten Regex

* Readjust link header ordering.

* Fix accessor to private.

--- a/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
@@ -1,7 +1,12 @@
 @inherits RazorSlice<LayoutViewModel>
+@using Elastic.Markdown.Helpers
 <head>
 	<title>@Model.Title</title>
-	<link rel="stylesheet" type="text/css" href="@Model.Static("styles.css")"/>
+	@foreach (var fontFile in await FontPreloader.GetFontUrisAsync())
+	{
+		<link rel="preload" href="@fontFile" as="font" type="font/woff2" crossorigin>
+	}
+	<link rel="stylesheet preload" as="style" type="text/css" href="@Model.Static("styles.css")" crossorigin/>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	@await RenderPartialAsync(_Favicon.Create())
