Fix/font preload static path (#775)
* Acquire static prefix from the Model.

--- a/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
@@ -2,7 +2,7 @@
 @using Elastic.Markdown.Helpers
 <head>
 	<title>@Model.Title</title>
-	@foreach (var fontFile in await FontPreloader.GetFontUrisAsync())
+	@foreach (var fontFile in await FontPreloader.GetFontUrisAsync(@Model.UrlPathPrefix))
 	{
 		<link rel="preload" href="@fontFile" as="font" type="font/woff2" crossorigin>
 	}
