Add ability to set canonical base url (#776)
* Add ability to set canonical base url

* Refactor to Uri

* Fix

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -13,6 +13,7 @@
 		UrlPathPrefix = Model.UrlPathPrefix,
 		GithubEditUrl = Model.GithubEditUrl,
 		AllowIndexing = Model.AllowIndexing,
+		CanonicalBaseUrl = Model.CanonicalBaseUrl,
 		Features = Model.Features,
 		StaticFileContentHashProvider = Model.StaticFileContentHashProvider
 	};
