Add ability to set description meta tag (#778)
* Add ability to set description meta tag

* WIP

* Cleanup

* Revert change to stylesheet

* Fix

* Fix merge conflicts

--- a/src/Elastic.Markdown/Slices/Index.cshtml
+++ b/src/Elastic.Markdown/Slices/Index.cshtml
@@ -5,6 +5,7 @@
 	public LayoutViewModel LayoutModel => new()
 	{
 		Title = $"Elastic Documentation: {Model.Title}",
+		Description = Model.Description,
 		PageTocItems = Model.PageTocItems.Where(i => i is { Level: 2 or 3 }).ToList(),
 		CurrentDocument = Model.CurrentDocument,
 		Previous = Model.PreviousDocument,
