--- a/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_Head.cshtml
@@ -11,13 +11,19 @@
 	<link rel="stylesheet preload" as="style" type="text/css" href="@Model.Static("styles.css")" crossorigin/>
 	@if (Model.CanonicalBaseUrl is not null)
 	{
-		<link rel="canonical" href="@(new Uri(Model.CanonicalBaseUrl, Model.CurrentDocument.Url).ToString())">
+		<link rel="canonical" href="@Model.CanonicalUrl" />
 	}
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	@await RenderPartialAsync(_Favicon.Create())
 	<meta name="robots" content="@(Model.AllowIndexing ? "index, follow" : "noindex, nofollow")">
 	<meta name="htmx-config" content='{"selfRequestsOnly": true}'>
 	<meta property="og:type" content="website"/>
-	<meta property="og:title" content="Elastic Docs v3"/>
-	<meta name="twitter:card" content="summary"/>
+	<meta property="og:title" content="@Model.Title"/>
+	<meta property="og:description" content="@Model.Description"/>
+	<meta property="og:image" content="https://www.elastic.co/static-res/images/social_media_default.png"/>
+	<meta property="og:image:alt" content="Elastic | The Search AI Company"/>
+	@if (!string.IsNullOrEmpty(Model.CanonicalUrl))
+	{
+		<meta property="og:url" content="@Model.CanonicalUrl" />
+	}
 </head>
