--- a/src/Elastic.Markdown/Slices/_Layout.cshtml
+++ b/src/Elastic.Markdown/Slices/_Layout.cshtml
@@ -24,7 +24,7 @@
 	@functions {
 		private async Task DefaultLayout()
 		{
-			<div class="grid grid-cols-1 md:grid-cols-[calc(var(--spacing)*60)_auto] lg:grid-cols-[1fr_3fr_1fr] gap-4 container">
+			<div class="container grid gap-2 grid-cols-1 md:grid-cols-[calc(var(--spacing)*65)_auto] lg:grid-cols-[calc(var(--spacing)*65)_auto_calc(var(--spacing)*50)]">
 				@await RenderPartialAsync(_PagesNav.Create(Model))
 				@await RenderPartialAsync(_TableOfContents.Create(Model))
 				<main id="content-container" class="w-full order-2 relative pb-30 overflow-x-hidden">
@@ -34,10 +34,10 @@
 						</div>
 						<div class="sr-only">Loading</div>
 					</div>
-					<div class="content-container md:px-6">
+					<div class="content-container md:px-4">
 						@await RenderPartialAsync(_Breadcrumbs.Create(Model))
 					</div>
-					<article id="markdown-content" class="content-container markdown-content md:px-6">
+					<article id="markdown-content" class="content-container markdown-content md:px-4">
 						<input type="checkbox" class="hidden" id="pages-nav-hamburger">
 						@await RenderBodyAsync()
 					</article>
