--- a/src/Elastic.Markdown/Slices/Layout/_TocTree.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_TocTree.cshtml
@@ -13,7 +13,7 @@
 						<a 
 							class="hover:underline text-blue-elastic hover:text-blue-elastic-100"
 							href="@current.Group.Index?.Url"
-							@Htmx.GetHxAttributes(current.Group.Index?.Url!, true)
+							@Htmx.GetHxAttributes(current.Group.Index?.Url!, false)
 						>
 							@current.Group.Index?.NavigationTitle
 						</a>
@@ -39,10 +39,9 @@
 							<a
 								class="block py-2 px-4 hover:underline hover:text-black hover:bg-grey-10 active:bg-blue-elastic-70 active:text-white font-semibold @(item.Group.Id == Model.Tree.Id ? "text-blue-elastic" : "")"
 								href="@item.Group.Index.Url"
-								hx-get="@item.Group.Index.Url"
-								hx-select-oob="#pages-nav,#content-container,#toc-nav"
-								hx-push-url="true"
-								preload>@item.Group.Index.NavigationTitle</a>
+								@Htmx.GetHxAttributes(item.Group.Index.Url, false, "mouseover")>
+								@item.Group.Index.NavigationTitle
+							</a>
 						</li>
 					}
 				</ul>
