Assembler: Inject global navigation into the build (#822)
* stage

* stage

* stage

* stage

* stage

* stage

* fix output path bug

* use url resolver for markdown urls

* render reference

* post merge build fixes

* toggle js a bit

* Add temporary TocReferences in navigation even if toc.yml does not exist

* fix duplicate reference output

* HTML templates keep track of their own depth

* Fix sitenav rendering with help of @reakaleek

* Tests require checkout folder, skipping for now

* attempt windows test failure

--- a/src/Elastic.Markdown/Slices/Layout/_TocTree.cshtml
+++ b/src/Elastic.Markdown/Slices/Layout/_TocTree.cshtml
@@ -62,7 +62,8 @@
 		@await RenderPartialAsync(_TocTreeNav.Create(new NavigationTreeItem
 		{
 			IsPrimaryNavEnabled = Model.IsPrimaryNavEnabled,
-			Level = Model.Tree.Depth,
+			IsGlobalAssemblyBuild = Model.IsGlobalAssemblyBuild,
+			Level = 0,
 			SubTree = Model.Tree,
 			RootNavigationId = Model.Tree.Id,
 		}))
