--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -232,3 +232,12 @@
 #elastic-nav {
 	min-height: var(--offset-top);
 }
+
+html, body {
+	height: 100%;
+}
+
+body {
+	display: grid;
+	grid-template-rows: auto auto 1fr auto;
+}
